# iVSR

./: README.md  ReleaseNotes.md  build.sh
docs/: generic_manual_build.md  quick_try_manual_build.md
ivsr_ffmpeg_plugin/: README.md  build_docker.sh
ivsr_ffmpeg_plugin/dockerfiles/rockylinux9/: Dockerfile  ov2024.5s.dockerfile
ivsr_ffmpeg_plugin/dockerfiles/ubuntu22/: Dockerfile  ov2024.5.dockerfile  ov2024.5s.dockerfile
ivsr_ffmpeg_plugin/patches/: 0001-This-commit-ports-ivsr-ffmpeg-plugin-from-n6.1-to-n7.patch  0002-Fix-10-bit-data-type-support.patch  0003-For-BasicVSR-make-the-inference-input-width-32-align.patch  0029-1-fix-preprocessing-to-support-different-resolutions.patch  0030-Add-option-to-set-number-of-streams.patch
ivsr_ffmpeg_plugin/patches-n6.1/: 0022-enable-10bit-for-YUV-and-16bit-for-RGB-support.patch  0027-Set-element-type-of-output-for-EDSR-model.patch  0028-Fix-10bit-data-type-support-and-add-more-comments.patch  0029-1-fix-preprocessing-to-support-different-resolutions.patch  0030-Add-option-to-set-number-of-streams.patch
ivsr_ov/based_on_openvino_2022.3/patches/: 0002-address-memory-issue-26.patch
ivsr_sdk/: CMakeLists.txt  README.md
ivsr_sdk/cmake/: options.cmake
ivsr_sdk/include/: ivsr.h
ivsr_sdk/privates/: CMakeLists.txt
ivsr_sdk/privates/include/: irguard.hpp
ivsr_sdk/privates/model_guard.bin/: CMakeLists.txt
ivsr_sdk/samples/: CMakeLists.txt  vsr_sample.cpp
ivsr_sdk/src/: CMakeLists.txt  ivsr.cpp  ivsr_thread_executor.cpp  ov_engine.cpp  smart_patch.cpp
ivsr_sdk/src/include/: InferTask.hpp  engine.hpp  ov_engine.hpp  (+2 more)
(+2 files in other folders)
